# faceRecognitionOnnxruntime

./: CMakeLists.txt  README.md  main.cpp  main.py  mxnet_to_onnx.py
include/: capture.cpp  capture.h  faceProcess.cpp  faceProcess.h  preprocessImg.h
